--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -29,8 +29,8 @@
               <ion-button [color]='getTableColor(9)' (click)='openTable(9)'>9</ion-button>
               <ion-button [color]='getTableColor(10)' (click)='openTable(10)'>10</ion-button>
               <ion-button class='double' [color]='getTableColor(11)' (click)='openTable(11)'>11</ion-button>
-              <ion-button [color]='getTableColor(12)' (click)='openTable(12)'>12</ion-button>
-              <ion-button [color]='getTableColor(13)' (click)='openTable(13)'>14</ion-button>
+              <ion-button [color]='getTableColor(12)' (click)='openTable(12)'>14</ion-button>
+              <ion-button [color]='getTableColor(13)' (click)='openTable(13)'>15</ion-button>
             </div>
           </div>
         </div>
@@ -42,37 +42,33 @@
           </div>
           <div class='flex-1'>
             <div class='top-tables space-evenly'>
-              <ion-button [color]='getTableColor(19)' (click)='openTable(19)'>5</ion-button>
-              <ion-button [color]='getTableColor(20)' (click)='openTable(20)'>6</ion-button>
-              <ion-button [color]='getTableColor(21)' (click)='openTable(21)'>7</ion-button>
-              <ion-button [color]='getTableColor(22)' (click)='openTable(22)'>8</ion-button>
-              <ion-button [color]='getTableColor(23)' (click)='openTable(23)'>9</ion-button>
+              <ion-button [color]='getTableColor(15)' (click)='openTable(15)' class='double'>1</ion-button>
+              <ion-button [color]='getTableColor(16)' (click)='openTable(16)' class='double'>2</ion-button>
+              <ion-button [color]='getTableColor(17)' (click)='openTable(17)' class='double'>3</ion-button>
             </div>
             <div class='space-evenly'>
-              <ion-button [color]='getTableColor(15)' (click)='openTable(15)'>1</ion-button>
-              <ion-button [color]='getTableColor(16)' (click)='openTable(16)'>2</ion-button>
-              <ion-button [color]='getTableColor(17)' (click)='openTable(17)'>3</ion-button>
               <ion-button [color]='getTableColor(18)' (click)='openTable(18)' class='double'>4</ion-button>
+              <ion-button [color]='getTableColor(19)' (click)='openTable(19)' class='double'>5</ion-button>
+              <ion-button [color]='getTableColor(20)' (click)='openTable(20)' class='double'>6</ion-button>
             </div>
           </div>
         </div>
       </div>
       <div class='llevar'>
-        <ion-button [color]='getTableColor(34)' (click)='openTable(34)'>Bar llevar</ion-button>
-        <ion-button [color]='getTableColor(33)' (click)='openTable(33)'>Viene a buscar</ion-button>
-        <ion-button [color]='getTableColor(31)' (click)='openTable(31)'>Komida</ion-button>
-        <ion-button [color]='getTableColor(32)' (click)='openTable(32)'>Fito</ion-button>
+        <ion-button [color]='getTableColor(33)' (click)='openTable(33)'>Para llevar</ion-button>
+        <ion-button [color]='getTableColor(32)' (click)='openTable(32)'>Viene a buscar</ion-button>
+        <ion-button [color]='getTableColor(30)' (click)='openTable(30)'>Komida</ion-button>
+        <ion-button [color]='getTableColor(31)' (click)='openTable(31)'>Fito</ion-button>
         <ion-button (click)='openOverview()'>Pedidos en curso</ion-button>
       </div>
     </div>
     <div class='extra-tables'>
-      <ion-button [color]='getTableColor(24)' (click)='openTable(24)'>15</ion-button>
-      <ion-button [color]='getTableColor(25)' (click)='openTable(25)'>16</ion-button>
-      <ion-button [color]='getTableColor(26)' (click)='openTable(26)'>17</ion-button>
-      <ion-button [color]='getTableColor(27)' (click)='openTable(27)'>18</ion-button>
-      <ion-button [color]='getTableColor(28)' (click)='openTable(28)'>19</ion-button>
-      <ion-button [color]='getTableColor(29)' (click)='openTable(29)'>20</ion-button>
-      <ion-button [color]='getTableColor(30)' (click)='openTable(30)'>Bar</ion-button>
+      <ion-button [color]='getTableColor(24)' (click)='openTable(24)'>16</ion-button>
+      <ion-button [color]='getTableColor(25)' (click)='openTable(25)'>17</ion-button>
+      <ion-button [color]='getTableColor(26)' (click)='openTable(26)'>18</ion-button>
+      <ion-button [color]='getTableColor(27)' (click)='openTable(27)'>19</ion-button>
+      <ion-button [color]='getTableColor(28)' (click)='openTable(28)'>20</ion-button>
+      <ion-button [color]='getTableColor(29)' (click)='openTable(29)'>Bar</ion-button>
       <img style='width: 80px;position: absolute;bottom: 4px;' src='../../assets/seb.png' />
     </div>
   </div>
