--- a/src/app/pages/orders/orders.page.scss
+++ b/src/app/pages/orders/orders.page.scss
@@ -19,6 +19,50 @@ ion-item-divider {
   margin-top: 15px;
   margin-bottom: 15px;
 }
+ion-card-subtitle {
+  .wtgmn-0,.wtgmn-1,.wtgmn-2,.wtgmn-3,.wtgmn-4,.wtgmn-5,.wtgmn-6,.wtgmn-7,.wtgmn-8,.wtgmn-9,.wtgmn-10 {
+    color: rgb(60, 209, 15);
+  }
+  .wtgmn-11,.wtgmn-12,.wtgmn-13,.wtgmn-14,.wtgmn-15 {
+    color: green;
+  }
+  .wtgmn-16,.wtgmn-17,.wtgmn-18,.wtgmn-19,.wtgmn-20 {
+    color: rgb(194, 191, 1);
+  }
+  .wtgmn-21,.wtgmn-22,.wtgmn-23,.wtgmn-24,.wtgmn-25 {
+    color: rgb(255, 187, 0);
+  }
+  .wtgmn-26,.wtgmn-27,.wtgmn-28,.wtgmn-29,.wtgmn-30 {
+    color: rgb(255, 145, 0);
+  }
+  .wtgmn-31,.wtgmn-32,.wtgmn-33,.wtgmn-34,.wtgmn-35 {
+    color: rgb(255, 123, 0);
+  }
+  .wtgmn-36,.wtgmn-37,.wtgmn-38,.wtgmn-39,.wtgmn-40 {
+    color: rgb(255, 81, 0);
+  }
+  .wtgmn-41,.wtgmn-42,.wtgmn-43,.wtgmn-44,.wtgmn-45 {
+    color: rgb(255, 0, 0);
+  }
+  .wtgmn-46,.wtgmn-47,.wtgmn-48,.wtgmn-49,.wtgmn-50 {
+    color: rgb(255, 0, 140);
+  }
+  .wtgmn-51,.wtgmn-52,.wtgmn-53,.wtgmn-54,.wtgmn-55,.wtgmn-56,.wtgmn-57,.wtgmn-58,.wtgmn-59,.wtgmn-60 {
+    color: rgb(247, 0, 255);
+  }
+  .wtgmn-61,.wtgmn-62,.wtgmn-63,.wtgmn-64,.wtgmn-65,.wtgmn-66,.wtgmn-67,.wtgmn-68,.wtgmn-69,.wtgmn-70 {
+    color: rgb(172, 0, 252);
+  }
+  .wtgmn-71,.wtgmn-72,.wtgmn-73,.wtgmn-74,.wtgmn-75,.wtgmn-76,.wtgmn-77,.wtgmn-78,.wtgmn-79,.wtgmn-80 {
+    color: rgb(0, 252, 239);
+  }
+  .wtgmn-81,.wtgmn-82,.wtgmn-83,.wtgmn-84,.wtgmn-85,.wtgmn-86,.wtgmn-87,.wtgmn-88,.wtgmn-89,.wtgmn-90 {
+    color: rgb(38, 0, 255);
+  }
+  .wtgmn-91,.wtgmn-92,.wtgmn-93,.wtgmn-94,.wtgmn-95,.wtgmn-96,.wtgmn-97,.wtgmn-98,.wtgmn-99,.wtgmn-100 {
+    color: rgb(88, 42, 255);
+  }
+}
 .orders {
   display: flex;
   flex-wrap: wrap;
