--- a/src/app/pages/overview/overview.page.html
+++ b/src/app/pages/overview/overview.page.html
@@ -24,8 +24,8 @@
   <h2 style='text-align:center;'>{{waitingTime}}min</h2>
   <div class='orders'>
     <ion-card *ngFor='let order of orders;' [class.primary]='order.state == OrderStateEnum["preparing"]' [class.success]='order.state == OrderStateEnum["ready"]'>
-      <ion-card-header>
-        <ion-card-subtitle style='text-transform: initial;'>{{order.waiterName}} - {{order.readyIn}}min</ion-card-subtitle>
+      <ion-card-header style='padding: 5px 10px;'>
+        <ion-card-subtitle style='text-transform: initial;'>{{order.waiterName}} - {{order.readyIn}}min<br><span class="wtgmn-{{moment().diff(moment(order.receivedAt), 'minutes')}}">Hace {{ moment().diff(moment(order.receivedAt), 'minutes') }} minutos</span></ion-card-subtitle>
         <ion-card-title>{{order.name}}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
