--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -59,7 +59,7 @@
         <ion-button [color]='getTableColor(32)' (click)='openTable(32)'>Viene a buscar</ion-button>
         <ion-button [color]='getTableColor(30)' (click)='openTable(30)'>Komida</ion-button>
         <ion-button [color]='getTableColor(31)' (click)='openTable(31)'>Fito</ion-button>
-        <ion-button (click)='openOverview()'>Pedidos en curso</ion-button>
+        <ion-button color='danger' (click)='openOverview()'>Pedidos en curso</ion-button>
       </div>
     </div>
     <div class='extra-tables'>
@@ -68,8 +68,11 @@
       <ion-button [color]='getTableColor(26)' (click)='openTable(26)'>18</ion-button>
       <ion-button [color]='getTableColor(27)' (click)='openTable(27)'>19</ion-button>
       <ion-button [color]='getTableColor(28)' (click)='openTable(28)'>20</ion-button>
+      <ion-button [color]='getTableColor(34)' (click)='openTable(34)'>21</ion-button>
+      <ion-button [color]='getTableColor(35)' (click)='openTable(35)'>22</ion-button>
+      <ion-button [color]='getTableColor(36)' (click)='openTable(36)'>23</ion-button>
+      <ion-button [color]='getTableColor(37)' (click)='openTable(37)'>24</ion-button>
       <ion-button [color]='getTableColor(29)' (click)='openTable(29)'>Bar</ion-button>
-      <img style='width: 80px;position: absolute;bottom: 4px;' src='../../assets/seb.png' />
     </div>
   </div>
 </ion-content>
