--- a/src/app/pages/table/table.page.html
+++ b/src/app/pages/table/table.page.html
@@ -2,39 +2,55 @@
   <ion-toolbar>
     <ion-buttons slot="start" *ngIf='selectedBillIndex != -1 && !showingHistory'>
       <div class='bill-name'>
-        <ion-menu-button style='position: absolute;left:0;top:-7px;'></ion-menu-button>
-        {{table.bills[selectedBillIndex]?.name}}
-        <ion-button fill='clear' color="primary" (click)='selectBill()'>
+        <ion-button class='change-bill-button' fill='solid' [color]="movingArticles ? 'warning' : 'primary'" (click)='toggleMovingArticles()'>
           <ion-icon name="documents-outline"></ion-icon>
+        </ion-button>
+        <!-- <ion-menu-button style='position: absolute;left:0;top:-14px;'></ion-menu-button> -->
+        <ion-button color="secondary" fill='solid' (click)='selectBill()' class='show-bills' [hidden]='selectedBillIndex == -1 || showingHistory'>
+          Cuentas ({{table.bills.length}})
+        </ion-button>
+        <ion-button class='add-bill-button' fill='solid' (click)='addBill()'>
+          <ion-icon name="add-outline"></ion-icon>
         </ion-button>
       </div>
     </ion-buttons>
     <ion-title>
-      {{table.name}}
-      <ion-button class='change-table-button' fill='clear' [hidden]='!table.opened' color="primary" (click)='changeTable()'>
-        <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
-      </ion-button>
+      <div *ngIf="selectedBillIndex == -1 || showingHistory">
+        {{table.name}}
+      </div>
+      <div *ngIf="selectedBillIndex != -1 && !showingHistory">
+        <ion-button size='small' class='table-name-button' fill='solid' color="secondary" (click)='renameBill()'>
+          {{table.name}} - {{table.bills[selectedBillIndex]?.name}}
+        </ion-button>
+        <ion-button class='change-table-button' fill='clear' [hidden]='!table.opened' color="primary" (click)='changeTable()'>
+          <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
+        </ion-button>
+      </div>
     </ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)='toggleHistory()' [hidden]='selectedBillIndex == -1 || !table.history.length' color="warning" class='history-button'><ion-icon name="timer"></ion-icon></ion-button>
-      <ion-button color="primary" fill='solid' (click)='backButton()' class='show-tables'>Mesas</ion-button>
+    <ion-buttons slot="end" class='table-action-buttons'>
+      <ion-button color="dark" (click)='toggleHistory()' fill='solid' [hidden]='selectedBillIndex == -1 || !table.history.length || showingHistory' class='history-button'>
+        Historial ({{table.history.length}})
+      </ion-button>
+      <ion-button color="primary" fill='solid' (click)='backButton()' class='show-tables'>
+        Mesas
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content *ngIf='selectedBillIndex == -1 || showingHistory'>
+  <ion-button [hidden]='selectedBillIndex != -1 || table.bills.length == 1' (click)='mergeBills()' expand='full' [color]="mergingBills ? 'success' : 'secondary'">
+    {{mergingBills ? 'OK' : 'Unir'}}
+  </ion-button>
   <div class='condensed-bills'>
-    <ion-card [class.history]='showingHistory' [class.sent]='bill.sent' class='bill click-effect' *ngFor='let bill of condensedBills;let i = index;' (click)='selectBill(i)'>
+    <ion-card [class.history]='showingHistory' [class.sent]='bill.sent' class='bill click-effect' *ngFor='let bill of condensedBills;let condensedBillIndex = index;' (click)='selectBill(condensedBillIndex)'>
       <ion-card-header>
         <ion-card-title>
           {{bill.name}}
-          <ion-button [hidden]='showingHistory' style='position: absolute;top: -11px;' fill='clear' color="primary" (click)='renameBill(i);$event.stopPropagation()'>
-            <ion-icon name="create-outline"></ion-icon>
-          </ion-button>
         </ion-card-title>
-        <ion-button [hidden]='showingHistory' [color]='bill.sent ? "success" : "primary"' style='margin-top:10px;' expand='full' color='success' (click)='closeBill(i);$event.stopPropagation();'>Cerrar</ion-button>
+        <ion-button [hidden]='showingHistory' [color]='bill.sent ? "success" : "primary"' style='margin-top:10px;' expand='full' color='success' (click)='closeBill(condensedBillIndex);$event.stopPropagation();'>Cerrar</ion-button>
       </ion-card-header>
-      <ion-list *ngIf='bill.newBatch && bill.newBatch.articles.length' class='articles new-batch' lines='full'>
+      <ion-list *ngIf='bill.newBatch && bill.newBatch.articles.length' class='articles new-batch' lines='none'>
         <div>
           <ion-item *ngFor='let article of bill.newBatch.articles' class='article'>
             <div class='quantity'>{{ article.q }}</div>
@@ -60,7 +76,7 @@
           </ion-item>
         </div>
       </ion-list>
-      <ion-list class='articles' lines='full'>
+      <ion-list class='articles' lines='none'>
         <div>
           <ion-item *ngFor='let article of bill.articles' class='article'>
             <div class='quantity'>{{ article.q }} </div>
@@ -99,6 +115,7 @@
           </ion-item>
         </div>
       </ion-list>
+      <ion-button *ngIf='mergingBills' [color]='table.bills[condensedBillIndex].merging ? "success" : "secondary"' expand='full' (click)='table.bills[condensedBillIndex].merging = !table.bills[condensedBillIndex].merging;$event.stopPropagation();'>Unir</ion-button>
     </ion-card>
   </div>
 </ion-content>
@@ -106,8 +123,20 @@
 <ion-content *ngIf='table && table.bills[selectedBillIndex] && !showingHistory'>
   <div id='table'>
     <div class='bill'>
+      <div *ngIf="movingArticles">
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <ion-button (click)='moveSelectedArticles(false)' expand='full' color='warning'>Otra mesa</ion-button>
+            </ion-col>
+            <ion-col>
+              <ion-button (click)='moveSelectedArticles(true)' expand='full' color='success'>Separar</ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </div>
       <ion-list class='articles' lines='full'>
-        <div *ngIf='table.bills[this.selectedBillIndex].newBatch.articles.length'>
+        <div *ngIf='table.bills[this.selectedBillIndex].newBatch.articles.length && !movingArticles'>
           <ion-item-divider color='medium'>
             <ion-label>
               {{table.bills[this.selectedBillIndex].newBatch.waiterName}} - {{table.bills[this.selectedBillIndex].newBatch.date}}
@@ -122,7 +151,7 @@
                 <ion-button (click)='validateArticles(true)' expand='full' color='success'>Enviar a cocina</ion-button>
               </ion-col>
             </ion-row>
-          </ion-grid> 
+          </ion-grid>
           <ion-item *ngFor='let article of table.bills[this.selectedBillIndex].newBatch.articles; let i = index' class='article click-effect' (click)='modifyArticle(table.bills[this.selectedBillIndex].newBatch, i)'>
             <div class='inner-article'>
               <div class='left-side'>
@@ -159,7 +188,7 @@
               {{batch.waiterName}} - {{batch.date}}
             </ion-label>
           </ion-item-divider>
-          <ion-item *ngFor='let article of batch.articles; let i = index' class='article click-effect' (click)='modifyArticle(batch, i)'>
+          <ion-item [color]="article.moving ? 'warning' : ''" *ngFor='let article of batch.articles; let i = index' class='article click-effect' (click)='modifyArticle(batch, i)'>
             <div class='inner-article'>
               <div class='left-side'>
                 <div class='name'>{{article.q}} {{menu.articles[article.ami].name}}</div>
@@ -216,13 +245,17 @@
           </ion-select>
         </ion-item>
       </ion-list>
+      <ion-button expand='full' color='secondary' *ngIf='selectedBillIndex != -1 && !showingHistory && table.bills[this.selectedBillIndex].hasItbis && !table.bills[this.selectedBillIndex].dgii.name' (click)='askingForComprobante()' class='comprobante'>Comprobante</ion-button>
+      <ion-item *ngIf="table.bills[this.selectedBillIndex].dgii.name">
+        <ion-label>{{table.bills[this.selectedBillIndex].dgii.name}}</ion-label>
+      </ion-item>
       <ion-list class='taxes' lines='full'>
         <ion-item class='service'>
           <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].hasService' (ionChange)='updateTotalPrice()'></ion-checkbox>
           <ion-label>Servicio <span>{{table.bills[this.selectedBillIndex].service | number}}</span></ion-label>
         </ion-item>
         <ion-item>
-          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].hasItbis' (ionChange)='updateTotalPrice()'></ion-checkbox>
+          <ion-checkbox [disabled]="table.bills[this.selectedBillIndex].dgii.name" slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].hasItbis' (ionChange)='updateTotalPrice()'></ion-checkbox>
           <ion-label>ITBIS <span>{{table.bills[this.selectedBillIndex].itbis | number}}</span></ion-label>
         </ion-item>
       </ion-list>
@@ -236,13 +269,13 @@
     <div class='choosing-articles' *ngIf='menu'>
       <div class='categories'>
         <ng-container *ngFor='let category of menu.articleCategories;let i = index'>
-          <ion-button [hidden]='category.name == "cigarillos" || category.name == "especial"' *ngIf='category.display' color='light' mode="ios" (click)='shortcut(i)'>{{category.name}}</ion-button>
+          <ion-button [hidden]='category.name == "cigarillos" || category.name == "especial"' *ngIf='category.display' color='primary' mode="ios" (click)='shortcut(i)'>{{category.name}}</ion-button>
         </ng-container>
       </div>
       <div id='articles-list'>
         <ng-container *ngFor='let category of menu.articleCategories;let i = index'>
           <ion-item-group *ngIf='category.display' id='shortcut-{{i}}'>
-            <ion-item-divider color='medium' class='ion-text-center'>
+            <ion-item-divider color='tertiary' class='ion-text-center'>
               <ion-label class='width-100'>{{category.name}}</ion-label>
             </ion-item-divider>
             <div class='category' *ngIf="category.articleIndexes.length / 2 as stop">
