--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -71,7 +71,15 @@
       <ion-button [color]='getTableColor(34)' (click)='openTable(34)'>21</ion-button>
       <ion-button [color]='getTableColor(35)' (click)='openTable(35)'>22</ion-button>
       <ion-button [color]='getTableColor(36)' (click)='openTable(36)'>23</ion-button>
+    </div>
+    <div class='extra-tables'>
       <ion-button [color]='getTableColor(37)' (click)='openTable(37)'>24</ion-button>
+      <ion-button [color]='getTableColor(38)' (click)='openTable(38)'>25</ion-button>
+      <ion-button [color]='getTableColor(39)' (click)='openTable(39)'>26</ion-button>
+      <ion-button [color]='getTableColor(40)' (click)='openTable(40)'>27</ion-button>
+      <ion-button [color]='getTableColor(41)' (click)='openTable(41)'>28</ion-button>
+      <ion-button [color]='getTableColor(42)' (click)='openTable(42)'>29</ion-button>
+      <ion-button [color]='getTableColor(43)' (click)='openTable(43)'>30</ion-button>
       <ion-button [color]='getTableColor(29)' (click)='openTable(29)'>Bar</ion-button>
     </div>
   </div>
