--- a/src/app/pages/waiter/waiter-select-table/waiter-select-table.page.html
+++ b/src/app/pages/waiter/waiter-select-table/waiter-select-table.page.html
@@ -52,6 +52,20 @@
       <div class='button click-effect' [class.opened]='openedTables[26]' (click)='openTable(26)'>18</div>
       <div class='button click-effect' [class.opened]='openedTables[27]' (click)='openTable(27)'>19</div>
       <div class='button click-effect' [class.opened]='openedTables[28]' (click)='openTable(28)'>20</div>
+      <div class='button click-effect' [class.opened]='openedTables[34]' (click)='openTable(34)'>21</div>
+    </div>
+    <div class='extra space-evenly flex-wrap'>
+      <div class='button click-effect' [class.opened]='openedTables[35]' (click)='openTable(35)'>22</div>
+      <div class='button click-effect' [class.opened]='openedTables[36]' (click)='openTable(36)'>23</div>
+      <div class='button click-effect' [class.opened]='openedTables[37]' (click)='openTable(37)'>24</div>
+      <div class='button click-effect' [class.opened]='openedTables[38]' (click)='openTable(38)'>25</div>
+      <div class='button click-effect' [class.opened]='openedTables[39]' (click)='openTable(39)'>26</div>
+      <div class='button click-effect' [class.opened]='openedTables[40]' (click)='openTable(40)'>27</div>
+    </div>
+    <div class='extra space-evenly flex-wrap'>
+      <div class='button click-effect' [class.opened]='openedTables[41]' (click)='openTable(41)'>28</div>
+      <div class='button click-effect' [class.opened]='openedTables[42]' (click)='openTable(42)'>29</div>
+      <div class='button click-effect' [class.opened]='openedTables[43]' (click)='openTable(43)'>30</div>
       <div class='button click-effect' [class.opened]='openedTables[29]' (click)='openTable(29)'>Bar</div>
     </div>
     <div class='bar'>
