--- a/src/app/pages/config/config.page.html
+++ b/src/app/pages/config/config.page.html
@@ -8,14 +8,15 @@
 </ion-header>
 
 <ion-content>
+  <br><br>
   <ion-button expand='full' (click)='updateMenu()'>Actualizar el menu</ion-button>
   <br><br>
-  <ion-button expand='full' (click)='forceReconnectionToServer()'>Conectarse al iPad</ion-button>
+  <!-- <ion-button expand='full' (click)='forceReconnectionToServer()'>Conectarse al iPad</ion-button>
   <br><br>
   <ion-button expand='full' (click)='playSound("pizza")'>Play pizza</ion-button>
   <br><br>
   <ion-button expand='full' (click)='playSound("bar")'>Play bar</ion-button>
   <br><br>
   <ion-button expand='full' (click)='playSound("kitchen")'>Play kitchen</ion-button>
-  <br><br>
+  <br><br> -->
 </ion-content>
